<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filtrer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mac.applicationvoyage.FiltrerActivity">

    <CheckBox
        android:text="@string/poi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxPOI"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />
    <CheckBox
        android:text="@string/parcours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxPOI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBoxParcours"
        android:checked="true" />
    <CheckBox
        android:text="@string/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBoxParcours"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/checkBoxCity"
        android:checked="true"
        android:duplicateParentState="false" />
    <Button
        android:text="@string/appliquer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAppliquer"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/checkBoxCity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:text="@string/Destinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDestination"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="200dp"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/checkBoxPOI"
        android:layout_alignParentStart="true" />
</RelativeLayout>
